[package]
name = "procon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs = { path = "external/ac-library-rs" }
my-library-rs = { path = "external/my-library-rs" }
proconio = { version = "=0.3.6", features = ["derive"] }
itertools = "=0.9.0"
#nalgebra = "=0.20.0"
superslice = "=1.0.0"
num = "=0.4"
ordered-float = "=1.0.2"
